src/qml/compiler/qv4compiler.cpp
@@ -441,6 +441,7 @@ void QV4::Compiler::JSUnitGenerator::writeFunction(char *f, QV4::Compiler::Conte
         function->flags |= CompiledData::Function::IsClosureWrapper;
 
     if (!irFunction->returnsClosure
+            || (irFunction->usesArgumentsObject == Context::ArgumentsObjectUsed)
             || irFunction->innerFunctionAccessesThis
             || irFunction->innerFunctionAccessesNewTarget) {
         // If the inner function does things with this and new.target we need to do some work in
